# Graphus

./: .dockerignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  VERIFICATION.md  deny.toml  docker-compose.yml  rust-toolchain.toml
.cargo/: config.toml
crates/graphus-auth/: Cargo.toml
crates/graphus-auth/src/: auth.rs  error.rs  lib.rs  limits.rs  password.rs  peercred.rs  rbac.rs  tls.rs  token.rs
crates/graphus-auth/tests/: security_jwt_and_passwords.rs
crates/graphus-bench/: Cargo.toml  LDBC.md  RESULTS.md  baseline.toml
crates/graphus-bench/benches/: commit_path.rs  commit_path_fsync.rs  common.rs  read_path.rs
crates/graphus-bench/src/: lib.rs
crates/graphus-bolt/: Cargo.toml
crates/graphus-bolt/fuzz/: .gitignore  Cargo.toml
crates/graphus-bolt/src/: error.rs  executor.rs  framing.rs  handshake.rs  lib.rs  message.rs  packstream.rs  server.rs  transport.rs
crates/graphus-bolt/tests/: packstream_roundtrip.proptest-regressions  packstream_roundtrip.rs  pull_flush_batching_bench.rs  reaudit_d1_packstream_point_recursion.rs  security_framing_handshake.rs  security_packstream.rs  security_state_machine.rs  session_public_api.rs
crates/graphus-bufpool/: Cargo.toml
crates/graphus-bufpool/src/: concurrent.rs  lib.rs  page.rs  pool.rs  sync.rs
crates/graphus-bufpool/tests/: concurrent_device_reads.rs  concurrent_eviction.rs  eviction_chain_repro.rs  loom_bufpool.rs  loom_dwb_ring.rs  loom_eviction_storm.rs  loom_freeze_vs_reader.rs
crates/graphus-bulk/: Cargo.toml
crates/graphus-bulk-gen/: Cargo.toml
crates/graphus-bulk-gen/src/: content_hash.rs  lib.rs  store_io.rs
crates/graphus-bulk-gen/tests/: determinism.rs  hermetic_roundtrip.rs
crates/graphus-bulk/src/: columnar.rs  dump.rs  header.rs  import.rs  lib.rs  value_parse.rs
crates/graphus-bulk/tests/: columnar_dump.rs  crash_recovery_bulk.rs  import_dump.rs  intern_hoist.rs  security_bulk.rs
crates/graphus-cli/: Cargo.toml
crates/graphus-cli/src/: client.rs  lib.rs  main.rs  render.rs  repl.rs
crates/graphus-cli/tests/: cli_uds.rs
crates/graphus-coldstore/: Cargo.toml
crates/graphus-coldstore/src/: lib.rs
crates/graphus-coldstore/tests/: measure_compression.rs  proptest_segment.rs
crates/graphus-columnar/: Cargo.toml
crates/graphus-columnar/src/: bitpack.rs  dictionary.rs  gorilla.rs  integer.rs  lib.rs
crates/graphus-columnar/tests/: roundtrip.proptest-regressions  roundtrip.rs
crates/graphus-crypto/: Cargo.toml
crates/graphus-crypto/src/: backup_envelope.rs  device.rs  header.rs  keyring.rs  lib.rs  nonce_budget.rs  nonce_source.rs  raw.rs  slot.rs  wal_sink.rs
crates/graphus-crypto/tests/: dwb_recover_home_transient_vs_torn_408.rs  encrypted_atomic_restore.rs  encrypted_backup_chain.rs  encrypted_store_and_wal_recovery.rs  encrypted_store_recovery.rs  encrypted_wal_recovery.rs  fork_nonce_safety.rs  pristine_page_tamper_bound.rs  sealed_backup_roundtrip.rs  security_aead_tamper.rs  security_nonce_uniqueness.rs
crates/graphus-cypher/: Cargo.toml
crates/graphus-cypher/benches/: snapshot_parallel.rs
crates/graphus-cypher/fuzz/: Cargo.toml
crates/graphus-cypher/src/: ast.rs  authorized_graph.rs  binding.rs  cardinality.rs  catalog.rs  column_cache.rs  constraint.rs  coordinator.rs  cost.rs  counters.rs  csr_adjacency.rs  equality.rs  equivalence.rs  errors.rs  eval.rs  executor.rs  extension.rs  function_registry.rs  gds_procedures.rs  graph_access.rs  index_set.rs  lexer.rs  lib.rs  loadcsv.rs  logical.rs  lower.rs  morsel.rs  ordering.rs  parser.rs  physical.rs  plan_cache.rs  procedure_registry.rs  read_only_graph.rs  read_source.rs  record_graph.rs  result.rs  runtime.rs  semantics.rs  snapshot.rs  spatial_fns.rs  (+10 more)
crates/graphus-cypher/tests/: bitmap_index.rs  checkpoint_reclaim.rs  columnar_analytical.rs  constraint_coordinator.rs  coordinator_staggered.rs  coordinator_statistics.rs  cost_based_optimizer.rs  counters.rs  crash_concurrency.rs  csr_adjacency.rs  elle.rs  error_classification.rs  executor.rs  extension.rs  fulltext_coordinator.rs  fulltext_index.rs  gc_watermark.rs  graph_access_seam.rs  hostile_queries.rs  index_wiring.rs  lexer_spans_property.rs  load_csv.rs  logical_planner.rs  morsel_expand.rs  morsel_group_aggregate.rs  morsel_label_aggregate.rs  morsel_rows.rs  mvcc_visibility.rs  online_index_build.rs  ordering_vs_keycodec.rs  parameter_binding.rs  physical_planner.rs  plan_cache.rs  planner_join_bound.rs  proptest_keycodec.rs  read_only_graph_equivalence.rs  reaudit_d5_loadcsv_budget.rs  reaudit_d5_recursion_shapes.rs  reaudit_d5_value_budget_builtins.rs  record_store_graph.rs  (+14 more)
crates/graphus-dst/: Cargo.toml
crates/graphus-dst/src/: checker.rs  cli.rs  fault.rs  faults.rs  harness.rs  isolation.rs  lib.rs  main.rs  misbehave.rs  mix.rs  model.rs  rng.rs  scenarios.rs  selfloop_churn.rs  vopr.rs  vopr_fault.rs  vopr_fuzz.rs  vopr_oracle.rs  vopr_property.rs  vopr_repro.rs  wire.rs  workload.rs
crates/graphus-dst/tests/: checker_teeth.rs  determinism.rs  double_crash_recovery.rs  gc_watermark_teeth.rs  multi_seed_crash.rs  non_vacuity.rs  property_churn_recovery.rs  real_thread_supernode_stress.rs  reaudit_d3_edge_loss_highrange.rs  reaudit_d3_triple_crash_churn.rs  selfloop_churn_recovery.rs  torn_data_page.rs  torn_wal_tail.rs  vopr_liveness_teeth.rs  vopr_oracle_teeth.rs  vopr_safety_teeth.rs  vopr_surfaced_injected_fault.rs  write_io_error.rs
crates/graphus-durability-demo/: Cargo.toml
crates/graphus-examples-harness/: Cargo.toml  build.rs
crates/graphus-fraud-gen/: Cargo.toml
crates/graphus-gds/: Cargo.toml
crates/graphus-gds-gen/: Cargo.toml
crates/graphus-index/: Cargo.toml
crates/graphus-io/: Cargo.toml
crates/graphus-iot-gen/: Cargo.toml
crates/graphus-kg-gen/: Cargo.toml
crates/graphus-rest/: Cargo.toml
crates/graphus-security-gen/: Cargo.toml
crates/graphus-server/: Cargo.toml  graphus.example.toml
crates/graphus-sim/: Cargo.toml
crates/graphus-social-gen/: Cargo.toml
crates/graphus-storage/: Cargo.toml
crates/graphus-tck/: 1  Cargo.toml
crates/graphus-txn/: Cargo.toml
(+343 files in other folders)
