[package]
name = "graphus-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "Peer-credential, JWT/Bearer authentication and RBAC for Graphus."

[dependencies]
graphus-core = { path = "../graphus-core" }
# Password hashing for Bolt native `LOGON` auth (`04 §8.4`). Argon2id is the modern default;
# the verifier is constant-time. 0.5 is the current stable line (0.6 is pre-release only).
argon2 = "0.5"
# JWT/Bearer for the REST interface (RFC 6750 / RFC 7519). HS256 only; `rust_crypto` selects the
# pure-Rust hmac+sha2 backend so no C toolchain / aws-lc-rs / ring is pulled in. `use_pem` (the
# crate default) is not needed for an HMAC secret, so it is disabled to keep the surface minimal.
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
serde = { version = "1", features = ["derive"] }
# TLS 1.3 server config for the network listeners (`D-auth-scheme`). The default `aws_lc_rs`
# provider installs a process-default CryptoProvider, so `ServerConfig::builder()` needs no manual
# provider wiring. The handshake itself is the server's job; this crate only builds the config.
rustls = "0.23"
# PEM -> DER decoding for the cert/key passed to `tls_server_config`.
rustls-pemfile = "2"

[dev-dependencies]
# Self-signed cert/key generation for the in-process TLS-config test only (no sockets opened).
rcgen = "0.14"
