[package]
name = "graphus-bufpool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "Self-managed buffer pool, page header and CRC32C checksums for Graphus."

[features]
# Deterministic Simulation Testing seam (`04 §11`): exposes `BufferPool::device_mut`, letting a DST
# harness reach the live block device of a running pool to arm a fault model mid-workload. OFF by
# default, so the production build never compiles the seam and the device stays encapsulated.
dst = []

# Eviction-diagnostics probe (`rmp` #359): exposes per-pool atomic counters classifying why a
# `select_victim` sweep came up empty (every frame genuinely pinned vs transiently latch-contended)
# and a wrong-page-read tripwire, so a fast runtime repro can MEASURE the precise mechanism of a
# spurious-fetch-error / wrong-bytes bug rather than guess at it. OFF by default; the production
# build never compiles the counters (zero cost — the methods do not exist).
bufpool-probe = []

[dependencies]
graphus-core = { path = "../graphus-core" }
graphus-io = { path = "../graphus-io" }
crc32c = "0.6"
# Fast, non-cryptographic hash (FxHashMap) for internal, integer-keyed hot maps only — the page
# table keys are internal PageIds, never attacker-controlled, so SipHash's DoS resistance is moot.
rustc-hash = "2"

# `loom` model-checks the concurrent buffer pool's latching logic. It is needed by the *library*
# (via `src/sync.rs`) only when compiled with `--cfg loom`, so it is gated on that cfg rather than
# being a plain dependency or a dev-dependency (the latter would not be visible to the lib build).
# Run the loom tests with:
#   RUSTFLAGS="--cfg loom" cargo test -p graphus-bufpool --test loom_bufpool --release
[target.'cfg(loom)'.dependencies]
loom = "0.7.2"

# The loom integration test (`tests/loom_bufpool.rs`) is itself a separate crate that needs loom
# for `loom::model`, `loom::thread` and `loom::sync`; gate it on `--cfg loom` too.
[target.'cfg(loom)'.dev-dependencies]
loom = "0.7.2"

# `loom` is a known custom cfg the crate sets via RUSTFLAGS; register it so `unexpected_cfgs`
# (and therefore `clippy -D warnings`) stays quiet without a build script.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
