[package]
name = "graphus-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "Authenticated encryption at rest for the Graphus record store (AES-256-GCM page encryption + HKDF keyring)."

[dependencies]
# Shared error taxonomy (`GraphusError::{Storage,Security}`) and `PageId`. Encryption errors map to
# `Security` (wrong/missing key, KCV/AEAD failure) or `Storage` (raw I/O), so the connectivity and
# storage layers classify them exactly as they do today.
graphus-core = { path = "../graphus-core" }
# The `BlockDevice` seam this crate implements (transparent page encryption lives at this boundary),
# plus `PAGE_SIZE`/`Page`. The encrypted device is a drop-in `BlockDevice`.
graphus-io = { path = "../graphus-io" }
# The `LogSink` seam the WAL writes through (rmp #88): `EncryptedLogSink<S>` wraps a backing sink and
# is itself a drop-in `LogSink`, so WAL encryption is transparent to `WalManager`/recovery. The
# dependency direction is `graphus-crypto -> graphus-wal` ONLY (graphus-wal never depends on
# graphus-crypto), keeping the graph acyclic.
graphus-wal = { path = "../graphus-wal" }

# AES-256-GCM AEAD: confidentiality + integrity + tamper-detection in one primitive, AES-NI
# accelerated on every Graphus target (x86-64, arm64/aarch64 incl. Apple Silicon and Raspberry Pi 5).
# Same RustCrypto ecosystem `graphus-auth` already uses (argon2, jsonwebtoken `rust_crypto`). The
# `getrandom` feature re-exports `aead::OsRng`, a CSPRNG nonce source, so no separate `rand` dep is
# needed. `std` is on (this is a server crate, not `no_std`).
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "getrandom", "std"] }
# Buffered CSPRNG for per-page / per-frame nonces (rmp #378). `OsRng` is the *un-buffered* OS RNG:
# one `getrandom(2)` syscall PER nonce, paid on every `write_page`/`seal_frame` — millions of
# syscalls (and a kernel-lock contention point) under a write-storm/bulk-load. `ChaCha20Rng` is a
# cryptographically secure PRNG: we seed it ONCE from `OsRng` (a full 32-byte ChaCha20 seed, one
# syscall) and then draw the 12 nonce bytes from userspace. Its 96-bit outputs keep the exact same
# birthday-collision bound (and unpredictability) the OS nonces had, so the nonce budget / GCM
# birthday ceiling is UNCHANGED. Version 0.3 uses `rand_core` 0.6.4 — the same `rand_core` the
# `aes-gcm` `getrandom` feature exposes via `aead::OsRng`, so the seed plumbing lines up exactly.
rand_chacha = "0.3"
# HKDF-SHA256 for purpose-separated subkey derivation (distinct `info` labels per purpose). `hkdf`
# 0.12 / `sha2` 0.10 are already in the workspace lockfile via the auth stack.
hkdf = "0.12"
sha2 = "0.10"
# Zero key material on drop (defence in depth: keys never linger in freed memory).
zeroize = { version = "1", features = ["derive"] }
# Constant-time comparison for the Key-Check-Value verification (no timing oracle on key validity).
subtle = "2"

[dev-dependencies]
# The mem-backed encrypted-device integration test drives a real `RecordStore` over the encrypted
# device (create → flush → crash → WAL recovery → assert intact), proving crash-consistency holds
# under encryption. `graphus-io` is already a normal dep, but the test names the `BlockDevice` trait
# directly (for `sync_all`), so it is re-declared here for clarity of intent.
graphus-storage = { path = "../graphus-storage" }
graphus-wal = { path = "../graphus-wal" }
# The pristine-page bound regression (rmp #87) drives the *real* storage-layer consumer —
# `graphus_bufpool::BufferPool::fetch`, which verifies each page's CRC32C header on load — to prove
# empirically that a zeroed-out real encrypted slot is rejected (the residual-risk bound documented
# in `device::read_page`). It also uses the `page` header/checksum helpers to build a realistic
# checksummed page, exactly as `new_page`/`write_back` produce.
graphus-bufpool = { path = "../graphus-bufpool" }
