[package]
name = "graphus-cypher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "Cypher parse, plan and execute pipeline for Graphus (targets the openCypher TCK)."

[dependencies]
graphus-core = { path = "../graphus-core" }
# The `RecordStoreGraph` GraphAccess implementation (src/record_graph.rs) runs the executor against
# the real persistent record store (`rmp` task #38). This edge is acyclic: graphus-storage depends
# on core/io/bufpool/wal/index, never on cypher.
graphus-storage = { path = "../graphus-storage" }
# `RecordStoreGraph` constructs/opens a `RecordStore` over the block-device and WAL abstractions,
# so it names their public types (devices, log sinks, the WAL manager, recovery).
graphus-io = { path = "../graphus-io" }
graphus-wal = { path = "../graphus-wal" }
# `RecordStoreGraph` filters every read by MVCC snapshot visibility (`04 §5.3`, `rmp` task #45):
# it holds a `Snapshot` + `CommitRegistry` and calls `graphus_txn::is_visible` on each record's
# frozen `xmin`/`xmax`. This edge is acyclic: graphus-txn depends only on core.
graphus-txn = { path = "../graphus-txn" }
# The `IndexSet` (src/index_set.rs) builds derived in-memory secondary indexes over the
# `graphus-index` kinds (`TokenIndex`/`PropertyIndex` on the WAL-logged `BTree`) for index wiring
# (`rmp` task #48). This edge is acyclic: graphus-index depends on core/io/bufpool/wal, never on
# cypher. (Also used by the ordering cross-check test that proves the Cypher value order agrees with
# the order-preserving index key byte order.)
graphus-index = { path = "../graphus-index" }
# Naming dependency only: `IndexSet::fresh_tree` constructs each backing `BTree` via
# `BTree::create(BufferPool<_, SharedWal<_>>, _)`, whose signature names `graphus_bufpool::BufferPool`
# directly. Already a transitive dependency (via graphus-index/graphus-storage), so this adds no new
# crate to the build graph. The edge is acyclic: graphus-bufpool depends on core/io/wal, never on
# cypher.
graphus-bufpool = { path = "../graphus-bufpool" }
# `LOAD CSV` (the in-query source clause, FR-BK) streams a local CSV file with the `csv` crate,
# honoring `WITH HEADERS` and a custom `FIELDTERMINATOR`. The reader is `std::io::Read`-based so a
# large file is streamed record-by-record, never slurped (the executor source pulls one row per
# record). The *offline* bulk importer/dumper live in the separate `graphus-bulk` crate, keeping the
# same dep out of the storage core.
csv = "1.4"

[dev-dependencies]
# Deterministic, seedable RNG for the reproducible cross-check property test.
graphus-sim = { path = "../graphus-sim" }
# Property-based (shrinking) formulation of the order-preserving key-codec invariant
# (`tests/proptest_keycodec.rs`, `rmp` task #27), complementing the deterministic cross-check in
# `ordering_vs_keycodec.rs`. `std`-only pin, matching the rest of the workspace.
proptest = { version = "1", default-features = false, features = ["std"] }
